Java9 migration (#1)
* Java 9 support added.

* Java 9 support added.